# cargo-plan

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
tests/: self.rs  structure.rs
tests/build_rs/: Cargo.toml  build.rs
tests/empty_lib/: Cargo.toml
tests/non_standard/: Cargo.toml
tests/util/: mod.rs
