[package]
name = "cargo-plan"
description = "Build plans for Cargo!"
version = "0.1.0"
authors = ["Nathan Howell <nathan.d.howell@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/NathanHowell/cargo-plan"

[dependencies]
cargo_metadata = "0.15.3"
clap = { version = "3.2.2", default-features = false, features = ["cargo", "std", "suggestions"] }
pathdiff = "0.2.0"
tar = "0.4.38"
tempfile = "3.3.0"

[build-dependencies]
vergen = "7.5.0"
