[package]
name = "cargo-plan"
description = "Build plans for Cargo!"
version = "0.1.0"
authors = ["Nathan Howell <nathan.d.howell@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/NathanHowell/cargo-plan"

[dependencies]
cargo_metadata = "0.22.0"
clap = { version = "4.5.46  ", default-features = false, features = ["cargo", "std", "suggestions"] }
pathdiff = "0.2.3"
tar = "0.4.44"
tempfile = "3.21.0"

[build-dependencies]
anyhow = "1.0.99"
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
